# fotobinder

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yaml  publish.yaml  windows-publish.yaml
.svelte-kit/: ambient.d.ts
.svelte-kit/types/: route_meta_data.json
.svelte-kit/types/src/routes/: $types.d.ts
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: errors.rs  init.rs  lib.rs  main.rs  state.rs
src-tauri/src/api/: collection.rs  collection_image.rs  fs_entry.rs  image_tag.rs  mod.rs  path_tag.rs  source.rs  tag.rs
src-tauri/src/biz/: collection.rs  collection_image.rs  fs_entry.rs  image_tag.rs  mod.rs  path_tag.rs  source.rs  tag.rs
src-tauri/src/cmd/: collection.rs  collection_image.rs  fs_entry.rs  image_tag.rs  mod.rs  path_tag.rs  source.rs  tag.rs
src-tauri/src/data/: init.rs  mod.rs
src-tauri/src/data/collection/: entity.rs  init.rs  repo.rs
src-tauri/src/data/collection_image/: entity.rs  init.rs  repo.rs
src-tauri/src/data/fs_entry/: entity.rs  init.rs  repo.rs
src-tauri/src/data/image_tag/: entity.rs  init.rs  mod.rs  repo.rs
src-tauri/src/data/path_tag/: entity.rs  init.rs  repo.rs
src-tauri/src/data/source/: entity.rs  init.rs  repo.rs
src-tauri/src/data/tag/: entity.rs  init.rs  repo.rs
src-tauri/src/errors/: app.rs
src-tauri/src/fs/: image.rs  mod.rs  queue.rs  scan.rs
src/lib/: Greet.svelte
src/lib/api/: collection.ts  collection_image.ts  error.ts  fs_entry.ts  image_tag.ts  path_tag.ts  source.ts  tag.ts
src/lib/components/alert/: Alert.svelte  AlertsWrapper.svelte
src/lib/components/animation/: SizeTransition.svelte
src/lib/components/button/: Button.svelte  IconButton.svelte
src/lib/components/collections/: AddToCollectionModal.svelte  (+2 more)
src/lib/nav/: params.ts  route.ts
src/lib/store/: alerts.ts  nav.ts  search.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/collections/: +page.svelte
src/routes/search/: +page.svelte
src/routes/tags/: +page.svelte
(+56 files in other folders)
