[package]
name = "fotobinder"
version = "0.0.1"
description = "A Tauri App"
authors = ["Callum Gundlach"]
license = ""
repository = "https://github.com/cgund98/fotobinder"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.30.0"
strum_macros = "0.25.3"
strum = "0.25.0"
chrono = "0.4.31"
uuid = "1.6.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.23.0"
anyhow = "1.0.75"
thiserror = "1.0.50"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
