[package]
name = "fotobinder"
version = "0.0.1"
description = "A Tauri App"
authors = ["Callum Gundlach"]
license = ""
repository = "https://github.com/cgund98/fotobinder"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-read-file", "fs-read-dir", "protocol-asset", "path-all", "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
strum_macros = "0.25.3"
strum = "0.25.0"
chrono = "0.4.31"
uuid = "1.6.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.23.0"
thiserror = "1.0.50"
walkdir = "2.4.0"
sha256 = "1.4.0"
image = "0.24.7"
fast_image_resize = "2.7.3"
tokio = {version = "1.34.0", features = ["full"] }
deadqueue = {version = "0.2.4", features= ["unlimited"] }
kamadak-exif = "0.5.5"
num_cpus = "1.16.0"
base64 = "0.21.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
